# flux-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  flux-utils.py  flux_utils.py  github_apis.py  main.py  pyproject.toml  run.sh
artifacts/app/: helmrelease.yaml
client/: flux_client.py  github_client.py
exceptions/: project_exceptions.py
models/: __init__.py  project.py
repositories/: flux_repository.py  github_repository.py  project_repository.py
routes/: default.py  project.py
schemas/: project_schema.py
services/: project_service.py
static/yaml_artifacts/: kustomization.yaml
static/yaml_artifacts/app/: helmrelease.yaml  helmrepo.yaml
utils/: auth.py  db.py  logger.py
